--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=02b727ec1c4790121dd85907387f02c7
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://debian-sys-maint:KgxFJWjAPPEbBdTk@127.0.0.1:3306/url1?serverVersion=5.7"
-# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="mysql://debian-sys-maint:KgxFJWjAPPEbBdTk@127.0.0.1:3306/url1?serverVersion=5.7"
+ DATABASE_URL="postgresql://rc_super_admin:rc1234@127.0.0.1:5432/ranked_choice?serverVersion=12.9&charset=utf8"
 ###< doctrine/doctrine-bundle ###
